--- a/su_yolu/index.html
+++ b/su_yolu/index.html
@@ -7,33 +7,27 @@
     <title>Su Yolu </title>
 
   <style>
-    body { 
-        max-width: 800px;
-            margin: 0;
-    }
-    img {
-        width: 100%
-    }
+    body { margin: 0; }
+    img { width: 100% }
     div {
         position: fixed;
-        border: 1px solid blue;
+        border: 1px solid cyan;
         cursor: pointer;
+        width: 15vw;
+        height: 9vw;
     }
-    #d01 {
-        left: 20px;
-        top: 40px;
-        width: 100px;
-        height: 60px;
-    }
-    #d08 {
-        left: 200px;
-        top: 140px;
-        width: 100px;
-        height: 60px;
-    }
-    p {
+    #d01 { left:  1vw; top:  6vw; }
+    #d02 { left: 17vw; top: 10vw; }
+    #d03 { left: 16vw; top: 20vw; }
+    #d04 { left: 13vw; top: 42vw; }
+    #d05 { left: 30vw; top: 32vw; }
+    #d06 { left: 39vw; top: 17vw; }
+    #d07 { left: 47vw; top:  1vw; }
+    #d08 { left: 58vw; top: 30vw; }
+    #d09 { left: 42vw; top: 43vw; }
+    .version {
         position: fixed;
-        top: 0;
+        top: 0; margin: 5px;
     }
   </style>
 </head>
@@ -41,39 +35,62 @@
 <body>
 
 <img id=harita src=harita01.jpg></img>
-<div id=d01></div>
-<div id=d08></div>
-<p>V0.1</p>
+<!--map name=map1> usemap="#map1"
+  <area onclick="zoom()" shape=rect coords="200,40,260,300" href="#">
+</map-->
+
+<div id=d01 title='1.havza.jpg'></div>
+<div id=d02 title='2.bent.jpg'></div>
+<div id=d03 title='3.galeri.jpg'></div>
+<div id=d04 title='4.havuz.jpg'></div>
+<div id=d05 title='5.kemer.jpg'></div>
+<div id=d06 title='6.maksem.jpg'></div>
+<div id=d07 title='7.cesme.jpg'></div>
+<div id=d08 title='8.sadirvan.jpg'></div>
+<div id=d09 title='9.hamam.jpg'></div>
+<p class=version>V0.2</p>
 
 <script>
 "use strict";
-var anim
+var file
 var dur = 3000 //msec
-const a1 = ['scale(1)', 'scale(3)']
-const a8 = ['scale(1)', 'scale(1.2)', 'scale(2)', 'scale(2.8)', 'scale(3)']
+const b0 = 'translate(0, 0)'
+const a1 = ['scale(1) translate(0, 0)', 'scale(3) translate(xxx)']
 function zoom(e) {
-    console.log("zoom")
-    let aa = (e.target.id == 'd01')? a1 : a8
-    anim = harita.animate({transform: aa}, dur)
-    harita.style.transform = aa[aa.length-1]
-    harita.onclick = normal
+    //if (!e.target.id) return
+    let t = e.target; file = t.title
+    let dx = -e.clientX+harita.clientWidth/2
+    let dy = -e.clientY+harita.clientHeight/2
+    let b1 = 'translate('+dx+'px, '+dy+'px)'
+    console.log("zoom", t.id, b1)
+    harita.animate({transform: [b0, b1]}, dur)
+    harita.style.transform = b1 //+' scale(3)'
+    setTimeout(() => {
+      harita.animate({transform: [b1+' scale(1)', b1+' scale(3)']}, dur)
+      setTimeout(display, dur)
+    }, dur) 
+    //harita.onclick = display
     for (let d of document.querySelectorAll('div'))
         d.style.display = 'none'
 }
+function display(e) {
+    //console.log("display", e)
+    harita.src = file
+    harita.style.transform =''
+    harita.onclick = normal
+}
 function normal(e) {
     console.log("normal")
-    anim.reverse()
-    harita.style.transform =''
+    harita.src = 'harita01.jpg'
     harita.onclick = ''
-    setTimeout(clear, dur)
+    clear() //setTimeout(clear, dur)
   function clear() {
     for (let d of document.querySelectorAll('div'))
         d.style.display = ''
   }
 }
-
-    d01.onclick = zoom; d08.onclick = zoom
+    for (let d of document.querySelectorAll('div'))
+        d.onclick = zoom
 </script>
-
 </body>
 </html>
