--- a/su_yolu/index.html
+++ b/su_yolu/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" href="su.png">
     <title>Su Yolu </title>
-
   <style>
     body { margin: 0; }
     img { width: 100% }
@@ -16,28 +15,32 @@
         width: 15vw;
         height: 9vw;
     }
-    #d01 { left:  1vw; top:  6vw; }
+    #d01 { left:  1vw; top:  9vw; }
     #d02 { left: 17vw; top: 10vw; }
     #d03 { left: 16vw; top: 20vw; }
-    #d04 { left: 13vw; top: 42vw; }
-    #d05 { left: 30vw; top: 32vw; }
+    #d04 { left: 13vw; top: 40vw; }
+    #d05 { left: 30vw; top: 34vw; }
     #d06 { left: 39vw; top: 17vw; }
     #d07 { left: 47vw; top:  1vw; }
-    #d08 { left: 58vw; top: 30vw; }
-    #d09 { left: 42vw; top: 43vw; }
-    .version {
+    #d08 { left: 58vw; top: 32vw; }
+    #d09 { left: 43vw; top: 44vw; }
+    #version {
         position: fixed;
         top: 0; margin: 5px;
+    }
+    #fileName {
+        position: fixed;
+        bottom: 0; margin: 5px;
     }
   </style>
 </head>
 
 <body>
 
+<p id=version>V0.3</p>
+<p id=fileName></p>
+
 <img id=harita src=harita01.jpg></img>
-<!--map name=map1> usemap="#map1"
-  <area onclick="zoom()" shape=rect coords="200,40,260,300" href="#">
-</map-->
 
 <div id=d01 title='1.havza.jpg'></div>
 <div id=d02 title='2.bent.jpg'></div>
@@ -48,49 +51,48 @@
 <div id=d07 title='7.cesme.jpg'></div>
 <div id=d08 title='8.sadirvan.jpg'></div>
 <div id=d09 title='9.hamam.jpg'></div>
-<p class=version>V0.2</p>
 
+<script src="https://lab.hakim.se/zoom-js/js/zoom.js"></script>
 <script>
 "use strict";
 var file
 var dur = 3000 //msec
 const b0 = 'translate(0, 0)'
 const a1 = ['scale(1) translate(0, 0)', 'scale(3) translate(xxx)']
-function zoom(e) {
-    //if (!e.target.id) return
-    let t = e.target; file = t.title
-    let dx = -e.clientX+harita.clientWidth/2
-    let dy = -e.clientY+harita.clientHeight/2
-    let b1 = 'translate('+dx+'px, '+dy+'px)'
-    console.log("zoom", t.id, b1)
-    harita.animate({transform: [b0, b1]}, dur)
-    harita.style.transform = b1 //+' scale(3)'
-    setTimeout(() => {
-      harita.animate({transform: [b1+' scale(1)', b1+' scale(3)']}, dur)
-      setTimeout(display, dur)
-    }, dur) 
-    //harita.onclick = display
+function boxStyle(s) {
     for (let d of document.querySelectorAll('div'))
-        d.style.display = 'none'
+        d.style.display = s
 }
-function display(e) {
-    //console.log("display", e)
+function display() {
+    console.log("display", file)
+    if (!file) return
     harita.src = file
-    harita.style.transform =''
+    let k = file.indexOf('.jpg')
+    fileName.innerText = file.substring(0, k)
     harita.onclick = normal
+    boxStyle('none')
+    setTimeout(zoom.out, 10)
+    //harita.style.transform =''
 }
-function normal(e) {
+function normal() {
     console.log("normal")
     harita.src = 'harita01.jpg'
     harita.onclick = ''
-    clear() //setTimeout(clear, dur)
-  function clear() {
-    for (let d of document.querySelectorAll('div'))
-        d.style.display = ''
-  }
+    fileName.innerText = ''
+    boxStyle('')
 }
-    for (let d of document.querySelectorAll('div'))
-        d.onclick = zoom
+function handleClick(e) {
+	if (zoom.zoomLevel() > 1) normal()
+	else {
+	    let t = e.target; file = t.title
+	    if (!file) return
+	    e.preventDefault()
+        console.log("zoom", file)
+	    zoom.to({ element: t, pan: false })
+	    setTimeout(display, dur)
+	}
+}
+	document.body.onclick = handleClick
 </script>
 </body>
 </html>
