Remove blue boxes

--- a/su_yolu/index.html
+++ b/su_yolu/index.html
@@ -23,7 +23,7 @@
     }
     .box {
         position: inherit;
-        border: 1px solid cyan;
+        /*border: 1px solid cyan;*/
         cursor: pointer;
         width: 15vw;
         height: 9vw;
@@ -60,7 +60,7 @@
 
   <img id=harita src=harita01.jpg></img>
   <img id=oyun></img>
-  <p id=surum>V0.5</p>
+  <p id=surum>V0.5a</p>
   <p id=isim></p>
   <p id=metin></p>
 
