--- a/kuran/seher1.html
+++ b/kuran/seher1.html
@@ -21,6 +21,24 @@
   <body>
 <h2>Kıraat Örnekleri</h2>
 
+<h3 id="fatiha">Fatiha Suresi</h3>
+<audio controls="">
+  <source src="sound/fatiha.ogg" />
+</audio>
+<hr>
+
+<h3 id="bakara">Bakara Suresi</h3>
+<audio controls="">
+  <source src="sound/bakara1.ogg" />
+</audio>
+<audio controls="">
+  <source src="sound/bakara2.ogg" />
+</audio>
+<audio controls="">
+  <source src="sound/bakara3.ogg" />
+</audio>
+<hr>
+
 <h3 id="yasin">Yasin Suresi</h3>
 <audio controls="">
   <source src="sound/yasin1.ogg" />
@@ -108,6 +126,24 @@
 </audio>
 <audio controls="">
   <source src="sound/cuma2.ogg" />
+</audio>
+<hr>
+
+<h3 id="kiyame">Kıyamet Suresi</h3>
+<audio controls="">
+  <source src="sound/kiyame.ogg" />
+</audio>
+<hr>
+
+<h3 id="insan">İnsan Suresi</h3>
+<audio controls="">
+  <source src="sound/insan.ogg" />
+</audio>
+<hr>
+
+<h3 id="alak">Alak Suresi</h3>
+<audio controls="">
+  <source src="sound/alak.ogg" />
 </audio>
 <hr>
 
