move video to YouTube
Zoom recording not used

--- a/sinan.html
+++ b/sinan.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="M A Eyler, Istanbul, 2020">
-    <link rel="icon" href="favicon.png">
     <title>Sinan olabilmek…</title>
   <style>
-    body { max-width: 600px; font: 16px arial; }
+    body { max-width: 660px; font: 16px arial; }
+    img { width: 100%; min-width: 560px; }
   </style>
   </head>
 
@@ -17,7 +17,7 @@
 <p><em>Tezkiretul-Bunyân</em>, Mimar Sinan’ın hayatını anlatan ilginç bir kitap.
 Edebiyat ile mühendisliğin benzersiz bir karışımı olan bu eser 1586’da 
 Sâî Mustafa Çelebi isimli az bilinen bir söz ustası tarafından yazılmış.
-40 dakikalık bu sunumda Sinan’ın gayret ve dua ile başarı kazanan
+32 dakikalık bu sunumda Sinan’ın gayret ve dua ile başarı kazanan
 insani yönü vurgulanıyor.</p>
 
 <h3 >26 Kasım 2020 20:30 Istanbul</h3>
@@ -26,11 +26,16 @@ insani yönü vurgulanıyor.</p>
 ID: 956 3375 1389  Passcode: 112233</p>
 <p>Sunumdaki bazı ayrıntıları görmek için telefon ekranı yetersiz kalabilir, 
 tablet ya da diz-üstü ekrandan izlemenizi tavsiye ederim. -->
-<a href="https://fsm-edu-tr.zoom.us/rec/share/qk-J1qrR--PA7Xxd_zOS5SqNhOaPCs-Ie_NMfo3O3m21-t3iJ_KSpXwBxoKlYava.yHsofGLUW4mXxElO?startTime=1606411967000">
-  Zoom kaydı</a> &emsp; 
+<!-- <a href=
+"https://fsm-edu-tr.zoom.us/rec/share/qk-J1qrR--PA7Xxd_zOS5SqNhOaPCs-Ie_NMfo3O3m21-t3iJ_KSpXwBxoKlYava.yHsofGLUW4mXxElO?startTime=1606411967000">
+  Zoom kaydı</a> &emsp;  -->
 <a href="https://maeyler.github.io/Sunumlar/Mimar%20Sinan%20sunum.pdf">
   PDF sunum</a>
 </p>
-<p><img src="/Sunumlar/sinan.jpg" alt="sinan" /></p>
+<iframe width="560" height="315" frameborder="0" allowfullscreen
+src="https://www.youtube.com/embed/wQoREdDhRJY" allow=
+"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+</iframe>
+<p><br><img src="/Sunumlar/sinan.jpg" alt="sinan" /></p>
   </body>
 </html>
