use MathJax.tex.inlineMath

--- a/math/testMath.html
+++ b/math/testMath.html
@@ -21,7 +21,7 @@
 
 <h2 id="github-içinde-tex">GitHub içinde TeX</h2>
 
-<p>Matematik ifadeleri  kitap kalitesinde yazmanın en kolay yolu TeX, şimdi GitHub sayfalarında…  \(n=1\) için birkaç örnek:</p>
+<p>Matematik ifadeleri  kitap kalitesinde yazmanın en kolay yolu TeX, şimdi GitHub sayfalarında…  HTML içinde yazılmış birkaç örnek:</p>
 
 • Quadratic Formula -- <a href="https://github.blog/2022-05-19-math-support-in-markdown">github blog</a></li>
 
@@ -39,9 +39,9 @@ $$ \left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) 
 $$ \large f(a) = \frac{1}{2\pi i} \oint\frac{f(z)}{z-a}dz $$
 
 
-• Inline math -- '$' fails, use '\<span>(</span>' <br>
-<br>
-sample fomula \(\sqrt{3x-1}+x^2\) is OK <br><br>
+• Inline math -- with '$' or '\<span>(</span>' <br><br>
+use dollar sign:  $\sin(n\pi) = 0 \quad$  OK <br><br>
+use backslash: \(\sqrt{3x-1}+x^2 \quad\) OK <br><br>
 
 
 • Cosine sum -- <a href="https://www.mathjax.org/#samples">MathJax</a></li>
@@ -56,7 +56,12 @@ $$ \cos(\theta+\phi)=\cos(\theta)\cos(\phi)-\sin(\theta)\sin(\phi) $$
 \cos(\theta+\phi)=\cos(\theta)\cos(\phi)-\sin(\theta)\sin(\phi)
 </pre>
 
-<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+  inlineMath = [['$', '$'], ['\\(', '\\)']]
+  MathJax = {tex: {inlineMath}}
+</script>
+<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
 
   </body>
 </html>
