--- a/math/testMath.html
+++ b/math/testMath.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width">
     <title>GitHub içinde TeX</title>
   <style>
     body { 
       max-width: 550px; 
       background: #dff;
-      font-family:Arial, Helvetica, sans-serif;
+      font-family: Trebuchet, Verdana, sans-serif;
+      font-size: 15px;
+      line-height: 1.5;
       margin: 12px;
     }
     img {
